--- a/ScoutingCollection/ScoutingCollection/MainPage.xaml
+++ b/ScoutingCollection/ScoutingCollection/MainPage.xaml
@@ -4,18 +4,20 @@
              xmlns:local="clr-namespace:ScoutingCollection"
              x:Class="ScoutingCollection.MainPage">
 
-    <StackLayout>
+    <StackLayout Padding="10,20,10,20">
         <StackLayout Orientation="Horizontal"
-                     Padding="20,0,20,0">
-            <Label Text="Team Number:"/>
+                     Padding="20,0,20,0"
+                     VerticalOptions="CenterAndExpand">
+            <Label Text="Team Number:" VerticalOptions="Center" FontSize="Medium"/>
             <Entry x:Name="Team"
                    Placeholder="i.e. 5472"
                    TextChanged="Team_TextChanged"/>
         </StackLayout>
 
         <StackLayout Orientation="Horizontal"
-                     Padding="20,0,20,0">
-            <Label Text="Match Number:" VerticalOptions="Center" HorizontalOptions="Center"/>
+                     Padding="20,0,20,0"
+                     VerticalOptions="CenterAndExpand">
+            <Label Text="Match Number:" VerticalOptions="Center" FontSize="Medium"/>
             <Entry x:Name="Match"
                    Placeholder="Ignore for pit scouting"
                    TextChanged="Match_TextChanged"
@@ -23,9 +25,17 @@
                    HorizontalOptions="Center"/>
         </StackLayout>
 
-        <Button x:Name="PitScout" Text="Pit Scout Team" Clicked="PitScout_Clicked"/>
+        <Button x:Name="PitScout" 
+                Text="Pit Scout Team" 
+                Clicked="PitScout_Clicked"
+                FontSize="Medium"
+                VerticalOptions="CenterAndExpand"/>
 
-        <Button x:Name="MatchScout" Text="Scout Match" Clicked="MatchScout_Clicked"/>
+        <Button x:Name="MatchScout" 
+                Text="Scout Match" 
+                Clicked="MatchScout_Clicked"
+                FontSize="Medium"
+                VerticalOptions="CenterAndExpand"/>
 
     </StackLayout>
 
