--- a/ScoutingCollection/ScoutingCollection/PitScoutingGeneral.xaml
+++ b/ScoutingCollection/ScoutingCollection/PitScoutingGeneral.xaml
@@ -28,9 +28,9 @@
                             HorizontalOptions="EndAndExpand"/>
                 </StackLayout>
 
-                <Entry x:Name="DriveTrain" Placeholder="Drive Train"/>
+                <Entry x:Name="DriveTrain" Placeholder="Drive Train" TextChanged="DriveTrain_TextChanged"/>
 
-                <Entry x:Name="CIMs" Placeholder="CIMs Used" Keyboard="Telephone"/>
+                <Entry x:Name="CIMs" Placeholder="CIMs Used" Keyboard="Telephone" TextChanged="CIMs_TextChanged"/>
 
                 <StackLayout Orientation="Horizontal" Padding="0,10,80,10">
                     <Label Text="FPS known? " FontSize="Medium" HorizontalOptions="StartAndExpand"/>
@@ -47,7 +47,7 @@
                            BindingContext="{Reference Name=Speed_fps}"/>
                 </StackLayout>
 
-                <Slider x:Name="Speed_fps" Maximum="25" Minimum="2"/>
+                <Slider x:Name="Speed_fps" Maximum="25" Minimum="2" ValueChanged="Speed_fps_ValueChanged"/>
 
                 <StackLayout Orientation="Horizontal">
                     <Label Text="Speed (1-5): " FontSize="Medium"/>
@@ -56,7 +56,7 @@
                            BindingContext="{Reference Name=Speed_scale}"/>
                 </StackLayout>
 
-                <Slider x:Name="Speed_scale" Maximum="5" Minimum="1"/>
+                <Slider x:Name="Speed_scale" Maximum="5" Minimum="1" ValueChanged="Speed_scale_ValueChanged"/>
 
                 <StackLayout Orientation="Horizontal" Padding="0,10,80,10">
                     <Label Text="Shifts gears: " FontSize="Medium" HorizontalOptions="StartAndExpand"/>
@@ -66,9 +66,9 @@
                             HorizontalOptions="EndAndExpand"/>
                 </StackLayout>
 
-                <Entry x:Name="Weight" Placeholder="Weight" Keyboard="Telephone"/>
+                <Entry x:Name="Weight" Placeholder="Weight" Keyboard="Telephone" TextChanged="Weight_TextChanged"/>
 
-                <Entry x:Name="BallCap" Placeholder="Ball Capacity" Keyboard="Telephone"/>
+                <Entry x:Name="BallCap" Placeholder="Ball Capacity" Keyboard="Telephone" TextChanged="BallCap_TextChanged"/>
 
                 <StackLayout Orientation="Horizontal" Padding="0,10,80,10">
                     <Label Text="Vision: " FontSize="Medium" HorizontalOptions="StartAndExpand"/>
