--- a/ScoutingCollection/ScoutingCollection/PitScoutingGeneral.xaml
+++ b/ScoutingCollection/ScoutingCollection/PitScoutingGeneral.xaml
@@ -1,21 +1,32 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:local="clr-namespace:ScoutingCollection"
              x:Class="ScoutingCollection.PitScoutingGeneral"
              Title="General">
-    <ContentPage.Content>
+
+    <ContentPage.Resources>
+        <ResourceDictionary>
+            <local:PitScoutingViewModel x:Key="viewModel"/>
+
+            <Style TargetType="Switch">
+                <Setter Property="Scale" Value="2.5"/>
+            </Style>
+        </ResourceDictionary>
+    </ContentPage.Resources>
+    
+    <ContentPage.Content BindingContext="{StaticResource viewModel}">
         <ScrollView>
             <StackLayout Padding="10,20,10,20">
 
                 <StackLayout Orientation="Horizontal">
                     <Label Text="Team " FontSize="Large"/>
-                    <Label Text="{Binding Path=Text}" FontSize="Large"/>
+                    <Label Text="{Binding Team}" FontSize="Large"/>
                 </StackLayout>
                 
                 <StackLayout Orientation="Horizontal" Padding="0,10,80,10">
                     <Label Text="Fuel: " FontSize="Medium" HorizontalOptions="StartAndExpand" VerticalOptions="Center"/>
                     <Switch x:Name="UsesFuel" 
-                            Scale="2.5" 
                             Toggled="UsesFuel_Toggled" 
                             HorizontalOptions="EndAndExpand"/>
                 </StackLayout>
@@ -23,7 +34,6 @@
                 <StackLayout Orientation="Horizontal" Padding="0,10,80,10">
                     <Label Text="Gears: " FontSize="Medium" HorizontalOptions="StartAndExpand"/>
                     <Switch x:Name="UsesGears" 
-                            Scale="2.5" 
                             Toggled="UsesGears_Toggled" 
                             HorizontalOptions="EndAndExpand"/>
                 </StackLayout>
@@ -35,7 +45,6 @@
                 <StackLayout Orientation="Horizontal" Padding="0,10,80,10">
                     <Label Text="FPS known? " FontSize="Medium" HorizontalOptions="StartAndExpand"/>
                     <Switch x:Name="FPS_known" 
-                            Scale="2.5" 
                             Toggled="FPS_known_Toggled" 
                             HorizontalOptions="EndAndExpand"/>
                 </StackLayout>
@@ -61,7 +70,6 @@
                 <StackLayout Orientation="Horizontal" Padding="0,10,80,10">
                     <Label Text="Shifts gears: " FontSize="Medium" HorizontalOptions="StartAndExpand"/>
                     <Switch x:Name="Shifts_gears" 
-                            Scale="2.5" 
                             Toggled="Shifts_gears_Toggled"
                             HorizontalOptions="EndAndExpand"/>
                 </StackLayout>
@@ -73,7 +81,6 @@
                 <StackLayout Orientation="Horizontal" Padding="0,10,80,10">
                     <Label Text="Vision: " FontSize="Medium" HorizontalOptions="StartAndExpand"/>
                     <Switch x:Name="Vision" 
-                            Scale="2.5" 
                             Toggled="Vision_Toggled"
                             HorizontalOptions="EndAndExpand"/>
                 </StackLayout>
@@ -81,7 +88,6 @@
                 <StackLayout Orientation="Horizontal" Padding="0,10,80,10">
                     <Label Text="Active Gear Dropoff: " FontSize="Medium" HorizontalOptions="StartAndExpand"/>
                     <Switch x:Name="Active_gear" 
-                            Scale="2.5" 
                             Toggled="Active_gear_Toggled"
                             HorizontalOptions="EndAndExpand"/>
                 </StackLayout>
@@ -89,7 +95,6 @@
                 <StackLayout Orientation="Horizontal" Padding="0,10,80,10">
                     <Label Text="Ground Gear Pickup: " FontSize="Medium" HorizontalOptions="StartAndExpand"/>
                     <Switch x:Name="Ground_gear" 
-                            Scale="2.5" 
                             Toggled="Ground_gear_Toggled"
                             HorizontalOptions="EndAndExpand"/>
                 </StackLayout>
@@ -106,7 +111,6 @@
                 <StackLayout Orientation="Horizontal" Padding="0,10,80,10">
                     <Label Text="Gear Run Time known? " FontSize="Medium" HorizontalOptions="StartAndExpand"/>
                     <Switch x:Name="Gear_time_known"
-                            Scale="2.5"
                             Toggled="Gear_time_known_Toggled"
                             HorizontalOptions="EndAndExpand"/>
                 </StackLayout>
@@ -132,7 +136,6 @@
                 <StackLayout Orientation="Horizontal" Padding="0,10,80,10">
                     <Label Text="Ground Ball Pickup: " FontSize="Medium" HorizontalOptions="StartAndExpand"/>
                     <Switch x:Name="Ground_ball_pickup"
-                            Scale="2.5"
                             Toggled="Ground_ball_pickup_Toggled"
                             HorizontalOptions="EndAndExpand"/>
                 </StackLayout>
