--- a/ScoutingCollection/ScoutingCollection/PitScoutingGeneral.xaml
+++ b/ScoutingCollection/ScoutingCollection/PitScoutingGeneral.xaml
@@ -7,8 +7,6 @@
 
     <ContentPage.Resources>
         <ResourceDictionary>
-            <local:PitScoutingViewModel x:Key="viewModel"/>
-
             <Style TargetType="Switch">
                 <Setter Property="Scale" Value="2.5"/>
             </Style>
@@ -18,12 +16,8 @@
     <ContentPage.Content>
         <ScrollView>
             <StackLayout Padding="10,20,10,20">
+                <Label Text="{Binding Team, StringFormat='Team {0}'}" FontSize="Large"/>
 
-                <StackLayout Orientation="Horizontal">
-                    <Label Text="Team " FontSize="Large"/>
-                    <Label Text="{Binding Team}" FontSize="Large"/>
-                </StackLayout>
-                
                 <StackLayout Orientation="Horizontal" Padding="0,10,80,10">
                     <Label Text="Fuel: " FontSize="Medium" HorizontalOptions="StartAndExpand" VerticalOptions="Center"/>
                     <Switch x:Name="UsesFuel" 
@@ -40,20 +34,16 @@
                             IsToggled="{Binding Gears, Mode=OneWayToSource}"/>
                 </StackLayout>
 
-                <Label Text="Drive Train: " FontSize="Medium"/>
-
                 <Entry x:Name="DriveTrain" 
                        Placeholder="Drive Train" 
                        TextChanged="DriveTrain_TextChanged"
-                       Text="{Binding Drive_Train}"/>
-
-                <Label Text="CIMs Used: " FontSize="Medium"/>
+                       Text="{Binding Drive_Train, Mode=OneWayToSource}"/>
 
                 <Entry x:Name="CIMs" 
                        Placeholder="CIMs Used" 
                        Keyboard="Telephone" 
                        TextChanged="CIMs_TextChanged"
-                       Text="{Binding CIMs_Used}"/>
+                       Text="{Binding CIMs_Used, Mode=OneWayToSource}"/>
 
                 <StackLayout Orientation="Horizontal" Padding="0,10,80,10">
                     <Label Text="FPS known? " FontSize="Medium" HorizontalOptions="StartAndExpand"/>
@@ -73,7 +63,7 @@
                         Maximum="25" 
                         Minimum="2"
                         ValueChanged="Speed_fps_ValueChanged"
-                        Value="{Binding Speed_FPS}"/>
+                        Value="{Binding Speed_FPS, Mode=OneWayToSource}"/>
 
                 <StackLayout Orientation="Horizontal">
                     <Label Text="Speed (1-5): " FontSize="Medium"/>
@@ -86,18 +76,27 @@
                         Maximum="5"
                         Minimum="1" 
                         ValueChanged="Speed_scale_ValueChanged"
-                        Value="{Binding Speed_Scale}"/>
+                        Value="{Binding Speed_Scale, Mode=OneWayToSource}"/>
 
                 <StackLayout Orientation="Horizontal" Padding="0,10,80,10">
                     <Label Text="Shifts gears: " FontSize="Medium" HorizontalOptions="StartAndExpand"/>
                     <Switch x:Name="Shifts_gears" 
                             Toggled="Shifts_gears_Toggled"
-                            HorizontalOptions="EndAndExpand"/>
+                            HorizontalOptions="EndAndExpand"
+                            IsToggled="{Binding Shifts_Gears, Mode=OneWayToSource}"/>
                 </StackLayout>
 
-                <Entry x:Name="Weight" Placeholder="Weight" Keyboard="Telephone" TextChanged="Weight_TextChanged"/>
+                <Entry x:Name="Weight" 
+                       Placeholder="Weight" 
+                       Keyboard="Telephone" 
+                       TextChanged="Weight_TextChanged"
+                       Text="{Binding Robot_Wt, Mode=OneWayToSource}"/>
 
-                <Entry x:Name="BallCap" Placeholder="Ball Capacity" Keyboard="Telephone" TextChanged="BallCap_TextChanged"/>
+                <Entry x:Name="BallCap" 
+                       Placeholder="Ball Capacity" 
+                       Keyboard="Telephone" 
+                       TextChanged="BallCap_TextChanged"
+                       Text="{Binding Ball_Cap, Mode=OneWayToSource}"/>
 
                 <StackLayout Orientation="Horizontal" Padding="0,10,80,10">
                     <Label Text="Vision: " FontSize="Medium" HorizontalOptions="StartAndExpand"/>
