--- a/ScoutingCollection/ScoutingCollection/PitScoutingReport.xaml
+++ b/ScoutingCollection/ScoutingCollection/PitScoutingReport.xaml
@@ -5,13 +5,27 @@
              Title="Report">
     <ContentPage.Content>
         <StackLayout>
+            <Label Text="{Binding Team, StringFormat='Team {0}'}" FontSize="Large"/>
             <Label Text="{Binding Team_Key}" />
             <Label Text="{Binding Robot_Key}"/>
-            <Label Text="{Binding Drive_Train}"
+            <Label Text="{Binding Drive_Train}"/>
             <Label Text="{Binding CIMs_Used}"/>
             <Label Text="{Binding Speed_FPS}"/>
             <Label Text="{Binding Speed_Scaled}"/>
+            <Label Text="{Binding Shifts_Gears, StringFormat='{0}'}"/>
             <Label Text="{Binding Robot_Wt}"/>
+            <StackLayout Orientation="Horizontal">
+                <Button x:Name="CancelPitScout"
+                        Text="Cancel Pit Scout"
+                        FontSize="Medium"
+                        Clicked="CancelPitScout_Clicked"
+                        HorizontalOptions="StartAndExpand"/>
+                <Button x:Name="SaveReport"
+                        Text="Save Report"
+                        FontSize="Medium"
+                        Clicked="SaveReport_Clicked"
+                        HorizontalOptions="EndAndExpand"/>
+            </StackLayout>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
