--- a/ScoutingCollection/ScoutingCollection/PitScoutingAuto.xaml
+++ b/ScoutingCollection/ScoutingCollection/PitScoutingAuto.xaml
@@ -1,11 +1,46 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:local="clr-namespace:ScoutingCollection"
              x:Class="ScoutingCollection.PitScoutingAuto"
              Title="Auto">
+
+    <ContentPage.Resources>
+        <ResourceDictionary>
+            <Style TargetType="Switch">
+                <Setter Property="Scale" Value="2.5"/>
+                <Setter Property="HorizontalOptions" Value="EndAndExpand"/>
+                <Setter Property="VerticalOptions" Value="Center"/>
+            </Style>
+        </ResourceDictionary>
+    </ContentPage.Resources>
+
     <ContentPage.Content>
-        <StackLayout>
-            <Label Text="Welcome to Xamarin Forms!" />
-        </StackLayout>
+        <ScrollView>
+            <StackLayout Padding="10,20,10,20">
+                <Label Text="{Binding Team, StringFormat='Team {0}'}" FontSize="Large"/>
+
+                <Picker x:Name="Start_Pos" 
+                        Title="Starting Position" 
+                        SelectedIndexChanged="Start_Pos_SelectedIndexChanged"
+                        SelectedItem="{Binding Start_Pos, Mode=OneWayToSource}">
+                    <Picker.ItemsSource>
+                        <x:Array Type="{x:Type x:String}">
+                            <x:String>Boiler</x:String>
+                            <x:String>Center</x:String>
+                            <x:String>Loading</x:String>
+                        </x:Array>
+                    </Picker.ItemsSource>
+                </Picker>
+
+                <StackLayout Orientation="Horizontal" Padding="0,10,80,10">
+                    <Label Text="Baseline: " FontSize="Medium" HorizontalOptions="StartAndExpand" VerticalOptions="Center"/>
+                    <Switch x:Name="Baseline_Crossed"
+                            IsToggled="{Binding Fuel, Mode=OneWayToSource}"/>
+                </StackLayout>
+                
+                
+            </StackLayout>
+        </ScrollView>
     </ContentPage.Content>
 </ContentPage>
