Continued XML implementation

--- a/ScoutingCollection/ScoutingCollection/PitScoutingReport.xaml
+++ b/ScoutingCollection/ScoutingCollection/PitScoutingReport.xaml
@@ -23,6 +23,7 @@
                 <Button x:Name="SaveReport"
                         Text="Save Report"
                         FontSize="Medium"
+                        Command="{Binding SerializeReport}"
                         Clicked="SaveReport_Clicked"
                         HorizontalOptions="EndAndExpand"/>
             </StackLayout>
