--- a/ScoutingCollection/ScoutingCollection/MainPage.xaml
+++ b/ScoutingCollection/ScoutingCollection/MainPage.xaml
@@ -26,6 +26,7 @@
                 <Label Text="Match Number:" VerticalOptions="Center" FontSize="Medium"/>
                 <Entry x:Name="Match"
                        Placeholder="Ignore for pit scouting"
+                       Text="{Binding Match, Mode=OneWayToSource}"
                        TextChanged="Match_TextChanged"
                        Completed="Match_Completed"
                        VerticalOptions="Center"
