--- a/ScoutingCollection/ScoutingCollection/MainPage.xaml
+++ b/ScoutingCollection/ScoutingCollection/MainPage.xaml
@@ -16,6 +16,7 @@
                 <Label Text="Team Number:" VerticalOptions="Center" FontSize="Medium"/>
                 <Entry x:Name="Team"
                        Placeholder="i.e. 5472"
+                       Keyboard="Numeric"
                        Text="{Binding Team, Mode=OneWayToSource}"
                        TextChanged="Team_TextChanged"/>
             </StackLayout>
