--- a/ScoutingCollection/ScoutingCollection/PitScoutingTeleOp.xaml
+++ b/ScoutingCollection/ScoutingCollection/PitScoutingTeleOp.xaml
@@ -3,11 +3,97 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="ScoutingCollection.PitScoutingTeleOp"
              Title="Tele-Op">
-    <ContentPage.Content>
-        <StackLayout>
-            <Label Text="{Binding Team, StringFormat='Team {0}'}" FontSize="Large"/>
 
-            <StackLayout/>
-        </StackLayout>
+    <ContentPage.Resources>
+        <ResourceDictionary>
+            <Style TargetType="Switch">
+                <Setter Property="Scale" Value="2.5"/>
+            </Style>
+        </ResourceDictionary>
+    </ContentPage.Resources>
+
+    <ContentPage.Content>
+        <ScrollView>
+            <StackLayout>
+                <Label Text="{Binding Team, StringFormat='Team {0}'}" FontSize="Large"/>
+
+                <Label Text="Gears Scored:"
+                   FontSize="Medium"
+                   HorizontalOptions="StartAndExpand"/>
+
+                <Picker x:Name="gears_scored"
+                    SelectedItem="{Binding TeleGears, Mode=OneWayToSource}"
+                    IsEnabled="{Binding Gears}">
+                    <Picker.ItemsSource>
+                        <x:Array Type="{x:Type x:String}">
+                            <x:String>1</x:String>
+                            <x:String>2</x:String>
+                            <x:String>3</x:String>
+                            <x:String>4</x:String>
+                            <x:String>5</x:String>
+                            <x:String>6</x:String>
+                            <x:String>7</x:String>
+                        </x:Array>
+                    </Picker.ItemsSource>
+                </Picker>
+
+                <Label Text="{Binding Path=Value, StringFormat='Fuel Scored: {0}'}"
+                       FontSize="Medium"
+                       HorizontalOptions="StartAndExpand"
+                       BindingContext="{Reference Name=fuel_scored}"/>
+
+                <Slider x:Name="fuel_scored"
+                        Maximum="100"
+                        Minimum="5"
+                        Value="{Binding TeleFuel, Mode=OneWayToSource}"
+                        IsEnabled="{Binding Fuel}"/>
+
+                <StackLayout Orientation="Horizontal" Padding="0,10,80,10">
+                    <Label Text="{Binding Path=Value, StringFormat='Accuracy (1-5): {0}'}"
+                           FontSize="Medium"
+                           HorizontalOptions="StartAndExpand"
+                           BindingContext="{Reference Name=acc_scale}"/>
+                </StackLayout>
+
+                <Slider x:Name="acc_scale"
+                        Maximum="5"
+                        Minimum="1"
+                        Value="{Binding AccScale, Mode=OneWayToSource}"
+                        IsEnabled="{Binding Fuel}"/>
+
+                <StackLayout Orientation="Horizontal" Padding="0,10,80,10">
+                    <Label Text="Low Goal?"
+                           FontSize="Medium"
+                           HorizontalOptions="StartAndExpand"/>
+                    <Switch x:Name="tele_low"
+                            HorizontalOptions="EndAndExpand"
+                            IsToggled="{Binding TeleLow, Mode=OneWayToSource}"
+                            IsEnabled="{Binding Fuel}"/>
+                </StackLayout>
+
+                <StackLayout Orientation="Horizontal" Padding="0,10,80,10">
+                    <Label Text="Climb:"
+                           FontSize="Medium"
+                           HorizontalOptions="StartAndExpand"/>
+                    <Switch x:Name="climb"
+                            HorizontalOptions="EndAndExpand"
+                            IsToggled="{Binding Climb, Mode=OneWayToSource}"/>
+                </StackLayout>
+
+                <StackLayout Orientation="Horizontal" Padding="0,10,80,10">
+                    <Label Text="{Binding Path=Value, StringFormat=' Climb Time: {0} seconds'}"
+                           FontSize="Medium"
+                           HorizontalOptions="StartAndExpand"
+                           BindingContext="{Reference Name=climb_time}"/>
+                </StackLayout>
+
+                <Slider x:Name="climb_time"
+                        Maximum="15"
+                        Minimum="2"
+                        Value="{Binding ClimbTime, Mode=OneWayToSource}"
+                        IsEnabled="{Binding Climb}"/>
+
+            </StackLayout>
+        </ScrollView>
     </ContentPage.Content>
 </ContentPage>
