--- a/ScoutingCollection/ScoutingCollection/PitScoutingReport.xaml
+++ b/ScoutingCollection/ScoutingCollection/PitScoutingReport.xaml
@@ -4,17 +4,18 @@
              x:Class="ScoutingCollection.PitScoutingReport"
              Title="Report">
     <ContentPage.Content>
-        <StackLayout>
-            <Label Text="{Binding Team, StringFormat='Team {0}'}" FontSize="Large"/>
-            <Label Text="{Binding Team_Key}" />
-            <Label Text="{Binding Robot_Key}"/>
-            <Label Text="{Binding Drive_Train}"/>
-            <Label Text="{Binding CIMs_Used}"/>
-            <Label Text="{Binding Speed_FPS}"/>
-            <Label Text="{Binding Speed_Scaled}"/>
-            <Label Text="{Binding Shifts_Gears, StringFormat='{0}'}"/>
-            <Label Text="{Binding Robot_Wt}"/>
-            <StackLayout Orientation="Horizontal">
+        <ScrollView>
+            <StackLayout Padding="10,20,10,20">
+            
+                <Button Text="Generate Preview"
+                        FontSize="Medium"
+                        Clicked="generatePreviewWrap"/>
+
+                <Label Text="{Binding Preview, Mode=OneWay}"
+                       FontSize="Small"
+                       />
+
+                <StackLayout Orientation="Horizontal">
                 <Button x:Name="CancelPitScout"
                         Text="Cancel Pit Scout"
                         FontSize="Medium"
@@ -26,7 +27,8 @@
                         Command="{Binding SerializeReport}"
                         Clicked="SaveReport_Clicked"
                         HorizontalOptions="EndAndExpand"/>
+                </StackLayout>
             </StackLayout>
-        </StackLayout>
+        </ScrollView>
     </ContentPage.Content>
 </ContentPage>
