--- a/ScoutingCollection/ScoutingCollection/PitScoutingGeneral.xaml
+++ b/ScoutingCollection/ScoutingCollection/PitScoutingGeneral.xaml
@@ -16,14 +16,14 @@
     <ContentPage.Content>
         <ScrollView>
             <StackLayout Padding="10,20,10,20">
-                <Label Text="{Binding Team, StringFormat='Team {0}'}" FontSize="Large"/>
+                <Label Text="{Binding CurrentReport.Team, StringFormat='Team {0}'}" FontSize="Large"/>
 
                 <StackLayout Orientation="Horizontal" Padding="0,10,80,10">
                     <Label Text="Fuel: " FontSize="Medium" HorizontalOptions="StartAndExpand" VerticalOptions="Center"/>
                     <Switch x:Name="UsesFuel" 
                             Toggled="UsesFuel_Toggled" 
                             HorizontalOptions="EndAndExpand"
-                            IsToggled="{Binding Fuel, Mode=OneWayToSource}"/>
+                            IsToggled="{Binding CurrentReport.Fuel, Mode=OneWayToSource}"/>
                 </StackLayout>
 
                 <StackLayout Orientation="Horizontal" Padding="0,10,80,10">
@@ -31,19 +31,19 @@
                     <Switch x:Name="UsesGears" 
                             Toggled="UsesGears_Toggled" 
                             HorizontalOptions="EndAndExpand"
-                            IsToggled="{Binding Gears, Mode=OneWayToSource}"/>
+                            IsToggled="{Binding CurrentReport.Gears, Mode=OneWayToSource}"/>
                 </StackLayout>
 
                 <Entry x:Name="DriveTrain" 
                        Placeholder="Drive Train" 
                        TextChanged="DriveTrain_TextChanged"
-                       Text="{Binding Drive_Train, Mode=OneWayToSource}"/>
+                       Text="{Binding CurrentReport.Drive_Train, Mode=OneWayToSource}"/>
 
                 <Entry x:Name="CIMs" 
                        Placeholder="CIMs Used" 
                        Keyboard="Telephone" 
                        TextChanged="CIMs_TextChanged"
-                       Text="{Binding CIMs_Used, Mode=OneWayToSource}"/>
+                       Text="{Binding CurrentReport.CIMs_Used, Mode=OneWayToSource}"/>
 
                 <StackLayout Orientation="Horizontal" Padding="0,10,80,10">
                     <Label Text="FPS known? " FontSize="Medium" HorizontalOptions="StartAndExpand"/>
@@ -63,7 +63,7 @@
                         Maximum="25" 
                         Minimum="2"
                         ValueChanged="Speed_fps_ValueChanged"
-                        Value="{Binding Speed_FPS, Mode=OneWayToSource}"/>
+                        Value="{Binding CurrentReport.Speed_FPS, Mode=OneWayToSource}"/>
 
                 <StackLayout Orientation="Horizontal">
                     <Label Text="Speed (1-5): " FontSize="Medium"/>
@@ -76,34 +76,34 @@
                         Maximum="5"
                         Minimum="1" 
                         ValueChanged="Speed_scale_ValueChanged"
-                        Value="{Binding Speed_Scale, Mode=OneWayToSource}"/>
+                        Value="{Binding CurrentReport.Speed_Scale, Mode=OneWayToSource}"/>
 
                 <StackLayout Orientation="Horizontal" Padding="0,10,80,10">
                     <Label Text="Shifts gears: " FontSize="Medium" HorizontalOptions="StartAndExpand"/>
                     <Switch x:Name="Shifts_gears" 
                             Toggled="Shifts_gears_Toggled"
                             HorizontalOptions="EndAndExpand"
-                            IsToggled="{Binding Shifts_Gears, Mode=OneWayToSource}"/>
+                            IsToggled="{Binding CurrentReport.Shifts_Gears, Mode=OneWayToSource}"/>
                 </StackLayout>
 
                 <Entry x:Name="Weight" 
                        Placeholder="Weight" 
                        Keyboard="Telephone" 
                        TextChanged="Weight_TextChanged"
-                       Text="{Binding Robot_Wt, Mode=OneWayToSource}"/>
+                       Text="{Binding CurrentReport.Robot_Wt, Mode=OneWayToSource}"/>
 
                 <Entry x:Name="BallCap" 
                        Placeholder="Ball Capacity" 
                        Keyboard="Telephone" 
                        TextChanged="BallCap_TextChanged"
-                       Text="{Binding Ball_Cap, Mode=OneWayToSource}"/>
+                       Text="{Binding CurrentReport.Ball_Cap, Mode=OneWayToSource}"/>
 
                 <StackLayout Orientation="Horizontal" Padding="0,10,80,10">
                     <Label Text="Vision: " FontSize="Medium" HorizontalOptions="StartAndExpand"/>
                     <Switch x:Name="Vision" 
                             Toggled="Vision_Toggled"
                             HorizontalOptions="EndAndExpand"
-                            IsToggled="{Binding Vision, Mode=OneWayToSource}"/>
+                            IsToggled="{Binding CurrentReport.Vision, Mode=OneWayToSource}"/>
                 </StackLayout>
 
                 <StackLayout Orientation="Horizontal" Padding="0,10,80,10">
@@ -111,7 +111,7 @@
                     <Switch x:Name="Active_gear" 
                             Toggled="Active_gear_Toggled"
                             HorizontalOptions="EndAndExpand"
-                            IsToggled="{Binding Active_Gear, Mode=OneWayToSource}"/>
+                            IsToggled="{Binding CurrentReport.Active_Gear, Mode=OneWayToSource}"/>
                 </StackLayout>
 
                 <StackLayout Orientation="Horizontal" Padding="0,10,80,10">
@@ -119,7 +119,7 @@
                     <Switch x:Name="Ground_gear" 
                             Toggled="Ground_gear_Toggled"
                             HorizontalOptions="EndAndExpand"
-                            IsToggled="{Binding Ground_Gear, Mode=OneWayToSource}"/>
+                            IsToggled="{Binding CurrentReport.Ground_Gear, Mode=OneWayToSource}"/>
                 </StackLayout>
 
                 <StackLayout Orientation="Horizontal">
@@ -133,7 +133,7 @@
                         Maximum="5" 
                         Minimum="1" 
                         ValueChanged="Ground_scale_ValueChanged"
-                        Value="{Binding Ground_Gear_Scale, Mode=OneWayToSource}"/>
+                        Value="{Binding CurrentReport.Ground_Gear_Scale, Mode=OneWayToSource}"/>
 
                 <StackLayout Orientation="Horizontal" Padding="0,10,80,10">
                     <Label Text="Gear Run Time known? " FontSize="Medium" HorizontalOptions="StartAndExpand"/>
@@ -153,7 +153,7 @@
                         Maximum="25" 
                         Minimum="5" 
                         ValueChanged="Gear_run_sec_ValueChanged"
-                        Value="{Binding Run_Sec, Mode=OneWayToSource}"/>
+                        Value="{Binding CurrentReport.Run_Sec, Mode=OneWayToSource}"/>
 
                 <StackLayout Orientation="Horizontal">
                     <Label Text="Gear Run (1-5): " FontSize="Medium"/>
@@ -166,20 +166,20 @@
                         Maximum="5" 
                         Minimum="1" 
                         ValueChanged="Gear_run_scale_ValueChanged"
-                        Value="{Binding Run_Scale, Mode=OneWayToSource}"/>
+                        Value="{Binding CurrentReport.Run_Scale, Mode=OneWayToSource}"/>
 
                 <StackLayout Orientation="Horizontal" Padding="0,10,80,10">
                     <Label Text="Ground Ball Pickup: " FontSize="Medium" HorizontalOptions="StartAndExpand"/>
                     <Switch x:Name="Ground_ball_pickup"
                             Toggled="Ground_ball_pickup_Toggled"
                             HorizontalOptions="EndAndExpand"
-                            IsToggled="{Binding Ground_Ball, Mode=OneWayToSource}"/>
+                            IsToggled="{Binding CurrentReport.Ground_Ball, Mode=OneWayToSource}"/>
                 </StackLayout>
 
                 <Picker x:Name="Strategy" 
                         Title="Strategy" 
                         SelectedIndexChanged="Strategy_SelectedIndexChanged"
-                        SelectedItem="{Binding Strategy, Mode=OneWayToSource}">
+                        SelectedItem="{Binding CurrentReport.Strategy, Mode=OneWayToSource}">
                     <Picker.ItemsSource>
                         <x:Array Type="{x:Type x:String}">
                             <x:String>Offense</x:String>
