--- a/ScoutingCollection/ScoutingCollection/PitScoutingReport.xaml
+++ b/ScoutingCollection/ScoutingCollection/PitScoutingReport.xaml
@@ -11,7 +11,7 @@
                         FontSize="Medium"
                         Clicked="generatePreviewWrap"/>
 
-                <Label Text="{Binding CurrentReport.Preview, Mode=OneWay}"
+                <Label Text="{Binding CurrentReport.Preview}"
                        FontSize="Small"
                        />
 
