Minor SaveReport and ReportsList tweaks Ensured that preview was generated before report saved; Added isMatch to report detail

--- a/ScoutingCollection/ScoutingCollection/ReportsListView.xaml
+++ b/ScoutingCollection/ScoutingCollection/ReportsListView.xaml
@@ -41,7 +41,7 @@
                     <StackLayout>
                         <Label Text="{Binding Identifier}" 
                                Style="{DynamicResource ListItemTextStyle}" />
-                        <Label Text="{Binding Detail}" 
+                        <Label Text="{Binding IsMatch}" 
                                Style="{DynamicResource ListItemDetailTextStyle}"/>
                     </StackLayout>
                 </ViewCell>
